# BillyEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  cross.sh  valgrind.sh  win.patch
.github/workflows/: build.yml
Demo/: CMakeLists.txt  Spawner.hpp  TestEntity.cpp  TestEntity.hpp  TestEntity2.cpp  TestEntity2.hpp  TestEntity3.hpp  TestEntity4.hpp  main.cpp
Demo/assets/: fragment.glsl  vertex.glsl
Demo/src/: ColoredQuad.cpp  ColoredQuad.hpp  FPSCounter.cpp  FPSCounter.hpp  MouseChaser.cpp  MouseChaser.hpp  PrintName.hpp  Spawner.cpp  Spawner.hpp  SpinningQuad.cpp  SpinningQuad.hpp  main.cpp
DemoCS/: DemoCS.csproj  Program.cs
Generator/: CMakeLists.txt  Generator.cpp
Generator/src/: Bundler.cpp  Bundler.hpp  main.cpp
Resources/: fragment.glsl  vertex.glsl
cmake/: CompilerFlags.cmake  Dependencies.cmake  GeneratorSetup.cmake  SWIG.cmake
cmake/Dependencies/: GLAD.cmake  GLFW.cmake  entt.cmake  fmt.cmake  glm.cmake  spdlog.cmake  stb_image.cmake
include/BillyEngine/: Application.h  Application.hpp  AssetTypes.h  BillyEngine.h  BillyEngine.hpp  Color.h  EnumerateAssetTypes.h  EnumerateMouseButtons.h  KeysCodes.h  MouseCodes.h  Renderer.h  ShaderDataType.h  Utils.h
include/BillyEngine++/: Application.hpp  BillyEngine.hpp
include/BillyEngine++/Assets/: AssetType.hpp
include/BillyEngine++/Core/: Color.hpp  Logger.hpp  Types.hpp
include/BillyEngine++/Entity/: Components.hpp  EntityManager.hpp
include/BillyEngine++/Events/: MouseCodes.hpp
include/BillyEngine++/Rendering/: BufferType.hpp  Renderer.hpp  VertexArray.hpp
include/BillyEngine/Assets/: AssetType.hpp  Image.hpp
include/BillyEngine/Core/: Color.hpp  PlatformDetection.hpp  Types.hpp  UUID.hpp
include/BillyEngine/Entity/: Entity.hpp
include/BillyEngine/Enumerate/: EnumerateAssetTypes.h  EnumerateMouseButtons.h  EnumerateShaderDataTypes.h
include/BillyEngine/Events/: KeyboardEvent.hpp  Keycodes.hpp  MouseCodes.hpp  MouseEvent.hpp
include/BillyEngine/Rendering/: Renderer.hpp  ShaderDataType.hpp  Uniform.hpp
scripts/: bindings.sh  cross.sh  valgrind.sh
src/: Application.cpp  Application.hpp  ApplicationWrapper.cpp  main.cpp
src/Assets/: Asset.hpp  AssetManager.cpp  AssetManager.hpp  Image.cpp
src/Components/: Components.hpp  IDComponent.hpp  ScriptComponent.cpp  ScriptComponent.hpp  ScriptManagerComponent.cpp  ScriptManagerComponent.hpp  SpriteComponent.cpp  SpriteComponent.hpp  TagComponent.cpp  TagComponent.hpp  TextComponent.cpp  TextComponent.hpp  TransformComponent.cpp  TransformComponent.hpp
src/Core/: Aliases.hpp  Assert.hpp  AssetManager.cpp  AssetManager.hpp  CenterPoint.cpp  CenterPoint.hpp  Color.cpp  Color.hpp  ColorWrapper.cpp  Common.hpp  EventHandler.cpp  EventHandler.hpp  FPSManager.cpp  FPSManager.hpp  Formatters.hpp  Logger.cpp  Logger.hpp  PlatformDetection.hpp  Profiler.cpp  Profiler.hpp  STDInclude.hpp  Types.hpp  UUID.cpp  UUID.hpp
src/Debugging/: Assert.hpp  Debug.hpp  DebugSettings.hpp  Profiler.cpp  Profiler.hpp
src/EngineAssets/: Wrapper.hpp
src/EngineAssets/Assets/: vertex.glsl
src/Entity/: Component.hpp  Entity.cpp  Entity.hpp  Entity.hxx  Entity.inl  EntityBehavior.cpp  EntityBehavior.hpp  EntityManager.cpp  EntityManager.hpp  Label.cpp  Label.hpp  Register.hpp  Register.inl  ScriptableEntity.cpp  ScriptableEntity.hpp
src/Event/: AppEvents.hpp  Event.hpp  EventHandler.cpp  EventHandler.hpp  EventManager.cpp  EventManager.hpp  Input.cpp  Input.hpp  KeyCodes.hpp  KeyboardEvent.hpp  MouseEvents.hpp  WindowEvent.hpp  WindowEvents.hpp
src/Events/: EnumerateKeys.h  Event.hpp  EventManager.cpp  EventManager.hpp  Input.cpp  Input.hpp  Keycodes.hpp  MouseCodes.hpp  WindowEvent.hpp
src/Rendering/: BackBuffer.cpp  BackBuffer.hpp  BufferType.cpp  DrawableTexture.cpp  DrawableTexture.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Renderer.cpp  Renderer.hpp  RendererWrapper.cpp  Shader.cpp  Shader.hpp  ShaderDataType.cpp  ShaderDataType.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  Uniform.cpp  Uniform.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  Window.cpp  Window.hpp
src/Window/: Window.cpp  Window.hpp
src/Wrappers/: Font.cpp  Font.hpp  Fwd.hpp  Surface.cpp  Surface.hpp  Texture.cpp  Texture.hpp
src/include/: BillyEngine.hpp
src/include/BillyEngine/: BillyEngine.hpp
swig/: BillyEngine.i  Bindings.csproj.template
